--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-# Requirements file for dependencies. Can be used in conjunction with pip and virtualenv.
+certifi==2017.11.5
+chardet==3.0.4
+decorator==4.1.2
+enum34==1.1.6
+idna==2.6
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
+nbformat==4.4.0
+plotly==2.2.3
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+traitlets==4.3.2
+urllib3==1.22
