Added file initialization support for WS proxy
Implemented init_from_file and read_packets for wireshark_proxy.py
Updated start_app.py to print stream created from initialization file
Updated .gitignore and settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -3,10 +3,10 @@ UseLiveCapture = no
 
 [p0f]
 CaptureInterface = en0
-InitFileLocation = init.cap
+InitFileLocation = /path/to/init.pcap
 DatabaseFilePath = default
-APISocketFilePath = p0f.sock
+APISocketFilePath = /path/to/p0f.sock
 
 [wireshark]
 CaptureInterface = en0
-InitFileLocation = init.cap
+InitFileLocation = /path/to/init.pcap
