Added tsa_statistics to analyzer module. Implemented country_counts statistics function.

--- a/settings.ini
+++ b/settings.ini
@@ -10,3 +10,6 @@ APISocketFilePath = /path/to/p0f.sock
 [wireshark]
 CaptureInterface = en0
 InitFileLocation = /path/to/init.pcap
+
+[geoip2]
+DatabaseFilePath = /path/to/geoipdb.mmdb
