--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ chardet==3.0.4
 configparser==3.5.0
 decorator==4.1.2
 enum34==1.1.6
+geoip2==2.6.0
 idna==2.6
 ipython-genutils==0.2.0
 jsonschema==2.6.0
 jupyter-core==4.4.0
 Logbook==1.1.0
 lxml==4.1.1
+maxminddb==1.3.0
 nbformat==4.4.0
 p0f==1.0.0
 plotly==2.2.3
