Added resources folder + more metadata updates
Added resources folder containing databases + other non source files
Coalesced CaptureInterface and InitFileLocation settings
Update installation instructions (again)
Removed json_parser.py

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 __pycache__/
 *.py[cod]
 
-# Pycharm IDE files
-.idea
+# Raw data files
+*.pcap
 
-# Temp Files
+# Pycharm IDE files
+*.idea
+
+# Temp files
 .*.sw*
 *~
 
