--- a/settings.ini
+++ b/settings.ini
@@ -1,15 +1,11 @@
 [app]
 UseLiveCapture = no
+CaptureInterface = en0
+InitFileLocation = ./resources/example.pcap
 
 [geoip2]
-DatabaseFilePath = /path/to/geoipdb.mmdb
+DatabaseFilePath = ./resources/geoipdb.mmdb
 
 [p0f]
-CaptureInterface = en0
-InitFileLocation = /path/to/init.pcap
-DatabaseFilePath = default
-APISocketFilePath = /path/to/p0f.sock
-
-[wireshark]
-CaptureInterface = en0
-InitFileLocation = /path/to/init.pcap
+DatabaseFilePath = ./resources/p0f.fp
+APISocketFilePath = ./resources/p0f.sock
