--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 certifi==2017.11.5
 chardet==3.0.4
+click==6.7
 configparser==3.5.0
+dash==0.19.0
+dash-core-components==0.17.0
+dash-html-components==0.8.0
+dash-renderer==0.11.1
 decorator==4.1.2
 enum34==1.1.6
+Flask==0.12.2
+Flask-Compress==1.4.0
 geoip2==2.6.0
 idna==2.6
 ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
 Logbook==1.1.0
 lxml==4.1.1
+MarkupSafe==1.0
 maxminddb==1.3.0
 nbformat==4.4.0
 p0f==1.0.0
@@ -23,3 +33,4 @@ tld==0.7.9
 traitlets==4.3.2
 trollius==1.0.4
 urllib3==1.22
+Werkzeug==0.14.1
