Overhauled analyzer layer
Separated geoip related code into capturer/geoip.py
Separated other analyzer methods into different files
Updated other code to point to new method lcations
Added EnableDebugMode setting

--- a/settings.ini
+++ b/settings.ini
@@ -1,9 +1,10 @@
 [app]
+EnableDebugMode = yes
 UseLiveCapture = yes
 CaptureInterface = en0
 InitFileLocation = ./resources/example.pcap
 
-[geoip2]
+[geoip]
 DatabaseFilePath = ./resources/geoipdb.mmdb
 
 [p0f]
